Revert "Servlet Bibliothecaire issue"
This reverts commit 1b5e3b4d23b66feafcf1e6b02ab3c1bdf05bdcc1.

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 <title>Inserer un bouquin</title>
 </head>
 <body>
-    <form action="" method="get">
+    <form action="RecapitulatifLivre.jsp" method="get">
             <p>Titre: <input type="text" name="titre"></p>
             <p>Auteur: <input type="text" name="auteur"></p>
             <p>Année: <input type="text" name="annee"></p>
